5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1756_672.log
== TEST (2019-05-20 15:48:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v0 = ones(6, dtype=int)

print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 15:48:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v0 = ones(6, dtype=int)

print(v0)
-- EXECUTION TIME:
0.457744
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 15:48:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v0 = ones(6, dtype=int)

print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 15:48:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("x: ")
v0 = ones(x, dtype=int)

print(v0)
-- ERROR:
File "XXXX", line 4
    v0 = ones(x, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 15:48:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("x: "))
v0 = ones(x, dtype=int)

print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 15:48:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("x: "))
v0 = ones(x, dtype=int)

print(v0)
-- EXECUTION TIME:
0.460229
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
